--- a/src/pages/users/styles/LoginForm.scss
+++ b/src/pages/users/styles/LoginForm.scss
@@ -1,7 +1,7 @@
 @import "../../../constants/colors.scss";
 .page-content {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   min-width: 1170px;
   min-height: 800px;
   position: relative;
